deploy/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: promai
  name: promai

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: promai
  namespace: promai
  labels:
    app: promai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promai
  template:
    metadata:
      labels:
        app: promai
    spec:
      volumes:
        - name: volume-kv418v
          configMap:
            name: config
            defaultMode: 420
        - name: host-time
          hostPath:
            path: /etc/localtime
            type: ''
      containers:
        - name: promai
          image: 'kubehan/promai:latest'
          ports:
            - name: tcp-8091
              containerPort: 8091
              protocol: TCP
          resources:
            limits:
              cpu: 20m
              memory: 50Mi
            requests:
              cpu: 5m
              memory: 15Mi
          volumeMounts:
            - name: volume-kv418v
              readOnly: true
              mountPath: /app/config
            - name: host-time
              readOnly: true
              mountPath: /etc/localtime
          livenessProbe:
            tcpSocket:
              port: 8091
            initialDelaySeconds: 15
            timeoutSeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 8
          readinessProbe:
            tcpSocket:
              port: 8091
            initialDelaySeconds: 15
            timeoutSeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 8
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---

kind: Service
apiVersion: v1
metadata:
  name: promai
  namespace: promai
  labels:
    app: promai
spec:
  ports:
    - name: http-80
      protocol: TCP
      port: 80
      targetPort: 8091
  selector:
    app: promai
  type: NodePort
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
